<resources>
    <string name="app_name">Music App</string>
    <string name="zeroed_time">0:00</string>
    <string name="select_image">Select Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="add_playlist">Add Playlist</string>
    <string name="choose_mp3">Tap to Choose \nMP3 File</string>
    <string name="song_title">Song Title</string>
    <string name="artist">Artist</string>
    <string name="add_song">Add Song</string>
    <string name="previous_song">Previous Song</string>
    <string name="play_pause">Play / Pause</string>
    <string name="next_song">Next Song</string>
    <string name="confirm_delete_playlist">Are you sure you want to permanently delete this playlist?</string>
    <string name="playlist_icon">Playlist Icon</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_song">Are you sure you want to permanently delete this song from your library all playlists?</string>
    <string name="song_icon">Song Icon</string>
    <string name="app_icon">App Icon</string>
    <string name="library_icon">Library Icon</string>
    <string name="my_library">My Library</string>
    <string name="song_options">Song Options</string>
    <string name="edit_playlist">Edit Playlist</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="confirm_remove_song">Are you sure you want to remove this song from this playlist?</string>
    <string name="remove">Remove</string>
    <string name="playlist_options">Playlist Options</string>
    <string name="add_song_other">Add Song to Other Playlist</string>
    <string name="edit_song">Edit Song</string>
    <string name="remove_song">Remove Song From Playlist</string>
    <string name="delete_song">Delete Song</string>
    <string name="loop">Loop Playlist</string>
    <string name="shuffle">Shuffle Playlist</string>
    <string name="default_image">Default_Image</string>
</resources>