<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="16dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/select_image_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintDimensionRatio="1:1"
            android:src="@drawable/blank_playlist"
            android:contentDescription="@string/default_image"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cover"
            />

        <Button
            android:id="@+id/select_image_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/select_image"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:padding="8dp"
            android:textStyle="bold"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/medium_gray"
        android:padding="16dp">
        <EditText
            android:id="@+id/add_playlist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:hint="@string/playlist_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/light_gray"
            android:textSize="24sp"/>
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/add_playlist_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/delete_red"
            android:layout_marginHorizontal="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/add_playlist_save_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/confirm_green"
            android:layout_marginHorizontal="5dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textStyle="bold"
            />
    </LinearLayout>
</LinearLayout>