<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomBar"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@color/black"
    android:clickable="true"
    android:focusable="true">
    <!-- Buttons Section -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/progress_bar_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageButton
            android:id="@+id/shuffle_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/shuffle"
            android:scaleType="fitCenter"
            android:src="@drawable/shuffle_off"
            />

        <ImageButton
            android:id="@+id/previous_song_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/previous_song"
            android:scaleType="fitCenter"
            android:src="@drawable/previous_button" />

        <ImageButton
            android:id="@+id/master_play_pause_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play_pause"
            android:scaleType="fitCenter"
            android:src="@drawable/play_button" />

        <ImageButton
            android:id="@+id/next_song_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next_song"
            android:scaleType="fitCenter"
            android:src="@drawable/skip_button"

            />
        
        <ImageButton
            android:id="@+id/loop_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/loop"
            android:scaleType="fitCenter"
            android:src="@drawable/loop_off" />
    </LinearLayout>

    <!-- Progress Bar Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/duration_start_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:text="@string/zeroed_time"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/duration_end_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingHorizontal="5dp"
            android:text="@string/zeroed_time"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <SeekBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:max="4096"
            android:paddingStart="0dp"
            android:paddingEnd="0dp"
            android:progress="0"
            android:progressDrawable="@drawable/song_progress"
            android:splitTrack="false"
            android:thumb="@drawable/seek_thumb"
            android:thumbOffset="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/duration_end_text"
            app:layout_constraintStart_toEndOf="@id/duration_start_text"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
